# doge-analyzer

./: .gitignore  README.md  pyproject.toml  setup.sh
results/example/: anomaly_predictions_20250330114514.csv  anomaly_predictions_20250401123603.csv  anomaly_predictions_20250402121650.csv  similarity_predictions_20250330165531.csv
results/example/analysis/: text_embedding_high_correlation_pairs.json
results/example/model/: anomaly_detector.joblib  similarity_detector.joblib
results/example/model/feature_fusion/: categorical_encoder.joblib  encoder_categories.joblib  numerical_scaler.joblib  top_agencies.joblib  top_vendors.joblib
results/test/: test_data.json  train_data.json
src/doge_analyzer/: __init__.py  cloudscraper.py  downloader.py  main.py  scrape.py
src/doge_analyzer/analysis/: feature_analysis.py
src/doge_analyzer/data/: __init__.py  load.py  preprocess.py  process.py
src/doge_analyzer/download/: __init__.py  download_awards.py  orchestrator.py  scrape.py  transform_data.py
src/doge_analyzer/evaluation/: model_evaluation.py
src/doge_analyzer/examples/: __init__.py  simple_example.py
src/doge_analyzer/features/: __init__.py  fusion.py  numerical.py  text.py
src/doge_analyzer/inference/: __init__.py  pipeline.py
src/doge_analyzer/models/: __init__.py  isolation_forest.py
src/doge_analyzer/utils/: __init__.py  visualization.py
tests/: __init__.py  test_basic.py  test_pipeline.py
tests/fixtures/: doge_contracts_test.json
tests/results/test_pipeline/: anomaly_predictions_20250401122353.csv  anomaly_predictions_20250401215128.csv  test_data.json  train_data.json
tests/scripts/: create_test_fixture.py
