[tool.poetry]
name = "doge-analyzer"
version = "0.1.0"
description = "DOGE API download and analysis."
authors = ["Allan Brewer <allan.brewer@yahoo.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.11.0"
cloudscraper = "^1.2.1"

[tool.poetry.group.dev.dependencies]

[build-system]  
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
