[tool.poetry]
name = "doge-analyzer"
version = "0.1.0"
description = "DOGE API download and analysis with contract cancelation detection."
authors = ["Allan Brewer <allan.brewer@yahoo.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "doge_analyzer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.11.0"
cloudscraper = "^1.2.1"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
tqdm = "^4.66.0"
zipfile36 = "^0.1.3"
joblib = "^1.3.0"
transformers = "^4.38.0"
torch = "2.2.0"
shap = "^0.47.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
isort = "^5.12.0"
ipykernel = "^6.29.5"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
doge-analyzer = "doge_analyzer.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[build-system]  
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
